[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GenericToolbox"
version = "1.0.0"
authors = [
  { name="Adrien Blanchet", email="adrien.blanchet@live.fr" },
]
description = "A personal python toolbox"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nadrino/py-generic-toolbox"
"Bug Tracker" = "https://github.com/nadrino/py-generic-toolbox/issues"
